Servidor Base de Datos/[Compi2]Proyecto1_201213587/src/Analisis/XML/Maestro/maestroGrammar.jj
options {
IGNORE_CASE = true;
STATIC = false;
OUTPUT_DIRECTORY="D:\\Titus\\Documents\\Proyectos\\Compiladores 2\\Proyecto 1\\FISQL\\Servidor Base de Datos\\[Compi2]Proyecto1_201213587\\src\\Analisis\\XML\\Maestro\\";

}

PARSER_BEGIN(maestroGrammar)
package Analisis.XML.Maestro;

public class maestroGrammar {
  public static void main(String args[]) throws ParseException {
    maestroGrammar parser = new maestroGrammar(System.in);
    parser.S();
  }
}
PARSER_END(maestroGrammar)

TOKEN:
{
  
    <T_DB_IZQ: ("<"(" ")*"db"(" ")*">")> {System.out.println(image);}
    |<T_PATH_IZQ: ("<"(" ")*"path"(" ")*">")> {System.out.println(image);}
    |<T_NOMBRE_IZQ: ("<"(" ")*"nombre"(" ")*">")> {System.out.println(image);}
    |<T_DB_DER: ("<"(" ")*"/"(" ")*"db"(" ")*">")> {System.out.println(image);}
    |<T_PATH_DER: ("<"(" ")*"/"(" ")*"path"(" ")*">")> {System.out.println(image);}
    |<T_NOMBRE_DER: ("<"(" ")*"/"(" ")*"nombre"(" ")*">")> {System.out.println(image);}
}

TOKEN:
{  
    <CADENA:"\"" (~["\""])*"\""> {System.out.println(image);}
}

SKIP: 
{
  " "
| "\n"
| "\r"
| "\t"
}

void S():
{}
{   {System.out.println("Comienza!!");}
    L_DB()
    {System.out.println("Exito!!");}
}

void L_DB():
{}
{
    DB() (L_DB())?
}

void DB():
{}
{
    <T_DB_IZQ> 
        <T_NOMBRE_IZQ> 
            <CADENA>
        <T_NOMBRE_DER>
        <T_PATH_IZQ> 
            <CADENA>
        <T_PATH_DER>
    <T_DB_DER>
}
